package logic.time;

public interface DateDifference {
	public long getDays();
	public long getMonths();
	public long getYears();
}
