@startuml

title __TIME's Class Diagram__\n

  package logic {
    package logic.time {
      class Age {
          + getBirthDate()
          + Age()
          + Age()
          + getDeathDate()
          + setDeathDate()
          + setDeathDate()
          + isAlreadyDead()
      }
    }
  }
  

  package logic {
    package logic.time {
      abstract class AppliedDateDifference {
          # start : LocalDate
          # end : LocalDate
          + getDays()
          + getMonths()
          + getYears()
      }
    }
  }
  

  package logic {
    package logic.time {
      interface DateDifference {
          {abstract} + getDays()
          {abstract} + getMonths()
          {abstract} + getYears()
      }
    }
  }
  

  Age -up-|> AppliedDateDifference
  AppliedDateDifference -up-|> DateDifference


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
